Fix minor layout issues

--- a/src/layouts/theme.scss
+++ b/src/layouts/theme.scss
@@ -23,9 +23,11 @@ html {
 
 body {
   position: relative;
-  min-height: calc(100% - 60px);
+  min-height: calc(100% - 64px);
+}
+
+.main-container {
   padding-bottom: 40px;
-  box-sizing: border-box;
 }
 
 .footer {
